# src/main/java/com/example/demo/model/IncomeDB.java
@@ -1,26 +1,24 @@
 package com.example.demo.model;
 
+import com.example.demo.enums.IncomeType;
 import lombok.Data;
-import lombok.NoArgsConstructor;
 import lombok.experimental.Accessors;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
+import javax.persistence.EnumType;
+import javax.persistence.Enumerated;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
-import javax.persistence.JoinColumn;
-import javax.persistence.ManyToOne;
 import javax.persistence.Table;
 import java.util.UUID;
 
 @Data
 @Accessors(fluent = true)
 @Entity
-@NoArgsConstructor
-@Table(name = "Income")
+@Table(name = "income")
 public class IncomeDB {
-
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
     private UUID id;
@@ -31,11 +29,7 @@ public class IncomeDB {
     @Column
     private String description;
 
-    @JoinColumn(nullable = false)
-    @ManyToOne
-    private GroupDB group;
-
-    public long budget(){
-        return group().budget();
-    }
+    @Column(name = "income_type")
+    @Enumerated(EnumType.STRING)
+    private IncomeType incomeType;
 }
